[project]
name = "tsp-phase-transition"
version = "0.1.0"
description = "This library provides tools for analyzing and detecting phase transitions in NP-hard Traveling Salesman Problem (TSP)"
authors = [
    {name = "SharinAlex",email = "apshavrinwork@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "hdbscan (>=0.8.40,<0.9.0)"
]

[tool.poetry]
packages = [{include = "tsp_phase_transition", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
